# google-takeout

./: .gitignore  Cargo.toml
.github/workflows/: simple.yml
src/: main.rs
