[package]
name = "google-takeout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde", "std"], default-features = false }
libflate = "1.2.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
simple_logger = "4.0.0"
tar = "0.4.38"
